--- a/IBus/app/src/main/AndroidManifest.xml
+++ b/IBus/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="team.com.ibus">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,7 +20,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.CadastrarUsuarioActivity"></activity>
+        <activity android:name=".Activity.CadastrarOnibus" />
+        <activity android:name=".Activity.CadastrarRota" />
+        <activity android:name=".Activity.CadastrarTrajeto" />
+        <activity android:name=".Activity.ListarOnibus" />
+        <activity android:name=".Activity.CadastrarPontoParada" />
+        <activity android:name=".Activity.ListarPontoParada" />
+        <activity android:name=".Activity.ListarRota"></activity>
     </application>
 
 </manifest>
